Fix author left aligning

--- a/assets/css/blog/single.css
+++ b/assets/css/blog/single.css
@@ -92,6 +92,7 @@
 
 .single-footer-middle {
     display: flex;
+    flex: 1;
     flex-direction: column;
 }
 
